[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = {workspace = true}
aes-gcm-siv = {workspace = true}
crypto = {workspace = true, features = ["digest", "password-hash", "cipher", "aead"]}
generic-array = {workspace = true}
hex = {workspace = true}
rand = {workspace = true}
sha3 = {workspace = true}
scrypt = {workspace = true}
