[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
either = "^1"
futures = "^0.3"
tokio = {workspace = true, features = ["full"]}
